--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.application.name=config-serve
 server.port=8888
 
 
-spring.cloud.config.server.git.uri=file:///C:/Users/52556/git/config
+#spring.cloud.config.server.git.uri=file:///C:/Users/52556/git/config
+spring.cloud.config.server.git.uri=https://github.com/IvanCruzMoreno/config-files.git
